Added webclips and installed concurrently

--- a/my-ethics-app/package.json
+++ b/my-ethics-app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
+    "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
