--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ fonttools==4.51.0
 fsspec==2024.3.1
 gradio==4.26.0
 gradio_client==0.15.1
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -48,6 +49,7 @@ pydub==0.25.1
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
